--- a/app.json
+++ b/app.json
@@ -1,5 +1,8 @@
 {
   "expo": {
+    "android": {
+      "package": "com.reactnativefirebase"
+    },
     "name": "FirebaseAuth",
     "slug": "FirebaseAuth",
     "version": "1.0.0",
@@ -13,9 +16,7 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
