--- a/package.json
+++ b/package.json
@@ -8,12 +8,33 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/toolbar-android": "^0.1.0-rc.1",
+    "@react-native-firebase/app": "^8.0.0",
+    "@react-native-firebase/auth": "^8.0.9",
+    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/native": "^5.6.1",
+    "@react-navigation/stack": "^5.6.2",
+    "base-64": "^0.1.0",
     "expo": "~38.0.1",
     "expo-status-bar": "^1.0.0",
+    "firebase": "^7.15.5",
+    "lodash.remove": "^4.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-elements": "^2.0.4",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-paper": "^3.10.1",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "3.0.2",
+    "react-native-screens": "~2.9.0",
+    "react-native-vector-icons": "*",
+    "react-native-web": "~0.11.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
