--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.1",
     "@react-native-firebase/app": "^8.0.0",
@@ -27,9 +28,10 @@
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-paper": "^3.10.1",
-    "react-native-reanimated": "~1.9.0",
+    "react-native-reanimated": "^2.0.0-alpha.3",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
+    "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "*",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
