--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/toolbar-android": "^0.1.0-rc.1",
@@ -19,8 +18,10 @@
     "@react-navigation/stack": "^5.6.2",
     "base-64": "^0.1.0",
     "expo": "~38.0.1",
+    "expo-auth-session": "~1.4.0",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
+    "formik": "^2.1.4",
     "lodash.remove": "^4.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
@@ -37,7 +38,8 @@
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "yup": "^0.29.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
