--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-vector-icons": "*",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
