--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-paper": "^4.0.1",
     "react-native-reanimated": "^2.0.0-alpha.3",
     "react-native-safe-area-context": "3.0.2",
