--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
-    "react-native-elements": "^2.0.4",
+    "react-native-elements": "^2.1.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
@@ -36,7 +36,7 @@
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
-    "react-native-vector-icons": "*",
+    "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "react-select": "^3.1.0",
