--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
     "name": "FirebaseAuth",
     "slug": "FirebaseAuth",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/icon.png",
     "splash": {
       "image": "./assets/splash.png",
