--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
+    "react-redux-firebase": "^3.7.0",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
