--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^2.0.0-alpha.3",
     "react-native-safe-area-context": "3.0.2",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
