HomeButton  link to Menu

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sharp-cli": "^1.14.1",
     "yup": "^0.29.1"
   },
   "devDependencies": {
