--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "react-redux-firebase": "^3.7.0",
+    "react-redux-firebase": "^3.0.0",
     "react-select": "^3.1.0",
     "redux": "^4.0.5",
+    "redux-firestore": "^0.13.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sharp-cli": "^1.14.1",
