--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
     "formik": "^2.1.4",
+    "immer": "^7.0.8",
     "lodash.remove": "^4.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
-    "react-native-elements": "^2.1.0",
+    "react-native-elements": "^2.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
