--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "base-64": "^0.1.0",
     "expo": "~38.0.1",
     "expo-auth-session": "~1.4.0",
+    "expo-font": "~8.2.1",
+    "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
     "formik": "^2.1.4",
