--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
+    "firebase-admin": "^9.1.1",
     "formik": "^2.1.4",
     "immer": "^7.0.8",
     "lodash.remove": "^4.7.0",
+    "moment": "^2.28.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
