--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "expo": "~38.0.1",
     "expo-auth-session": "~1.4.0",
     "expo-font": "~8.2.1",
+    "expo-payments-stripe": "~8.2.1",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
     "firebase": "^7.15.5",
-    "firebase-admin": "^9.1.1",
     "formik": "^2.1.4",
     "immer": "^7.0.8",
     "lodash.remove": "^4.7.0",
@@ -32,6 +32,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^2.3.2",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
