--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.20.0",
     "base-64": "^0.1.0",
     "expo": "~38.0.1",
     "expo-auth-session": "~1.4.0",
@@ -22,6 +23,7 @@
     "expo-payments-stripe": "~8.2.1",
     "expo-splash-screen": "~0.3.1",
     "expo-status-bar": "^1.0.0",
+    "expo-stripe-checkout": "^1.0.1",
     "expo-updates": "~0.2.10",
     "firebase": "^7.15.5",
     "firebase-tools": "^8.10.0",
