--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.20.0",
     "base-64": "^0.1.0",
     "expo": "~38.0.1",
     "expo-auth-session": "~1.4.0",
