--- a/package.json
+++ b/package.json
@@ -16,16 +16,19 @@
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
+    "axios": "^0.20.0",
     "base-64": "^0.1.0",
     "expo": "~38.0.1",
     "expo-auth-session": "~1.4.0",
     "expo-status-bar": "^1.0.0",
+    "expo-stripe-checkout": "^1.0.1",
     "firebase": "^7.15.5",
     "formik": "^2.1.4",
     "lodash.remove": "^4.7.0",
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^2.1.0",
     "react-native-extended-stylesheet": "^0.12.0",
     "react-native-gesture-handler": "~1.6.0",
